fix(statusbar): increase contrast
Increase contrast on third-party status bar

--- a/src/app/components/components/text-editor/text-editor.component.scss
+++ b/src/app/components/components/text-editor/text-editor.component.scss
@@ -1,3 +1,6 @@
 .editor {
   height: 200px;
 }
+.editor-statusbar {
+  color: #000;
+}
